commit tree 7ab885d214b550d516d482e2e2631f774b3cbed0

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="drowsily yawning lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="drowsily yawning lion" title="My image placeholder">
   </body>
 </html>
